# dlpack

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml  tests.yml
multi-languages/: Cargo.toml  build.rs
multi-languages/tests/: numpy.rs
multi-lingual/: Cargo.toml
multi-lingual/tests/: numpy.rs
src/: data_types.rs  lib.rs  ndarray.rs  pyo3.rs  sys.rs
